--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,3 +1,8 @@
 li a {
-	color : green;
+	color : black;
+}
+
+body {
+	background: white url("images/mountain-landscape-2031539_1920.jpg") no-repeat;
+	background-size:auto;
 }
