--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
 {% if latest_question_list %}
     <ul>
