--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,8 +1,17 @@
 li a {
 	color : black;
+	text-decoration : none !important;
+}
+
+a:link {
+	text-decoration : none;
 }
 
 body {
 	background: white url("images/mountain-landscape-2031539_1920.jpg") no-repeat;
 	background-size:auto;
+}
+
+.top40 {
+	margin-top : 40px;
 }
