--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,15 +1,27 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
-{% if latest_question_list %}
-    <ul>
-    {% for question in latest_question_list %}
-        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+<div class="container">
+	<div>
+		<h2 class="display-3">Questions list</h2>
+	</div>
+	
+	{% if latest_question_list %}
+	<ul class="list-group top40">
+	    {% for question in latest_question_list %}
+		    {% if forloop.first %}
+		        <li class="list-group-item list-group-item-action active"><as href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+		    {% else %}
+		    	<li class="list-group-item list-group-item-action"><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+		    {% endif %}
+	    {% endfor %}
+	    </ul>
+	{% else %}
+	    <p>No polls are available.</p>
+	{% endif %}
+	
+</div>
