--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -6,7 +6,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
 <div class="container">
-	<div>
+	<div class="row">
 		<h2 class="display-3">Questions list</h2>
 	</div>
 	
